# Lab3_TC

./: README.md
Primera-Parte/: CMakeLists.txt  datos.txt  forGraphic.cpp  forGraphic.h  forPostfix.cpp  forPostfix.h  forPythonGraphs.cpp  forPythonGraphs.h  main.cpp
